# CodeTurtle

./: .current_session  .gitignore  README.md  config.py  debug_KB.py  debug_chunker.py  debug_document_builder.py  debug_full_FalkorDB_QueryWeaver_571.txt  debug_full_NousResearch_hermes-agent_66232.txt  debug_qdrant.py  debug_retrieval.py  debug_retrieval_FalkorDB_QueryWeaver_571.txt  debug_retriever_NousResearch_hermes-agent.txt  main.py  pyproject.toml
.codeturtle/repositories/FalkorDB_QueryWeaver/: repository_model.json
.codeturtle/repositories/embeddings-benchmark_mteb/: repository_model.json
cli/: main.py
cli/commands/: add_repo.py  init.py  inspect_kb.py  review.py  session.py
core/: agents.py  chunker.py  code_quality_agent.py  context_builder.py  correctness_agent.py  document_builder.py  evidence.py  graph.py  hybrid_retriever.py  knowledge_base.py  llm.py  llm_gateway.py  models.py  observability.py  outputs.py  pr_analysis.py  pr_understanding.py  repository_analyzer.py  repository_indexer.py  repository_intelligence.py  repository_model.py  repository_persistence.py  reranker.py  state.py  utils.py
core/gateway/: __init__.py  gateway.py
core/gateway/providers/: ollama_provider.py  openai_provider.py
core/memory/: database.py  manager.py
data/: codeturtle.db
debug_scripts/: debug_embedding.py  debug_repo_model.py  debug_retrieval.py
qdrant_data/: meta.json
tests/verification/: phase1_repository_intelligence.py  phase2_change_intelligence.py  phase3_retrieval.py  run_verification.py
