[project]
name = "reviewforge"
version = "0.1.0"
description = "Autonomous GitHub Review Agent Swarm"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pygithub>=2.0.0",
    "langgraph>=0.2.0",
    "langchain-ollama>=1.1.0",
    "qdrant-client>=1.18.0",
    "langchain-qdrant>=1.1.0",
    "gitpython>=3.1.50",
    "langchain-community>=0.4.2",
    "langchain>=1.3.13",
    "langchain-text-splitters>=1.1.2",
    "tqdm>=4.68.4",
    "langfuse>=4.14.0",
    "structlog>=26.1.0",
    "litellm==1.91.0",
]
